feat: Enhance social media provider functionality with stub mode and OAuth support
- Added stub mode functionality to AbstractSocialMediaProvider for testing purposes.
- Implemented methods for OAuth URL generation and token exchange in stub mode.
- Introduced error handling for API requests with logging for failures.
- Defined default OAuth scopes for Facebook, Instagram, LinkedIn, TikTok, Twitter, and YouTube providers.
- Updated services configuration to include social media API settings and enable/disable options.

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,17 @@
 APP_NAME="Social Media Marketing Platform"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
 # MongoDB Atlas Configuration
 DB_CONNECTION=mongodb
 DB_DSN=mongodb+srv://
-
 # Redis Configuration
 REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=5000
 REDIS_DB=0
 REDIS_CACHE_DB=1
 REDIS_SESSION_DB=2
@@ -46,12 +45,50 @@ FILESYSTEM_DISK=local
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-# Social Media API Keys (Phase 3)
-TWITTER_CLIENT_ID=
-TWITTER_CLIENT_SECRET=
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
-INSTAGRAM_CLIENT_ID=
-INSTAGRAM_CLIENT_SECRET=
-LINKEDIN_CLIENT_ID=
-LINKEDIN_CLIENT_SECRET=
+# Social Media API Keys - REAL APIS
+# Twitter/X Configuration
+TWITTER_CLIENT_ID=your_twitter_client_id_here
+TWITTER_CLIENT_SECRET=your_twitter_client_secret_here
+TWITTER_BEARER_TOKEN=your_twitter_bearer_token_here
+TWITTER_ENABLED=true
+
+# Facebook Configuration  
+FACEBOOK_CLIENT_ID=your_facebook_app_id_here
+FACEBOOK_CLIENT_SECRET=your_facebook_app_secret_here
+FACEBOOK_ENABLED=true
+
+# Instagram Configuration (uses Facebook API)
+INSTAGRAM_CLIENT_ID=your_facebook_app_id_here
+INSTAGRAM_CLIENT_SECRET=your_facebook_app_secret_here
+INSTAGRAM_ENABLED=true
+
+# LinkedIn Configuration
+LINKEDIN_CLIENT_ID=your_linkedin_client_id_here
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret_here
+LINKEDIN_ENABLED=true
+
+# YouTube Configuration
+YOUTUBE_CLIENT_ID=your_youtube_client_id_here
+YOUTUBE_CLIENT_SECRET=your_youtube_client_secret_here
+YOUTUBE_API_KEY=your_youtube_api_key_here
+YOUTUBE_ENABLED=true
+
+# TikTok Configuration
+TIKTOK_CLIENT_ID=your_tiktok_client_id_here
+TIKTOK_CLIENT_SECRET=your_tiktok_client_secret_here
+TIKTOK_ENABLED=true
+
+# Provider Mode (stub = fake data, real = actual APIs)
+SOCIAL_PROVIDER_MODE=stub
+# Change to 'real' when you have API keys
+
+# OAuth Redirect URLs
+OAUTH_REDIRECT_BASE_URL=http://localhost:8000/oauth/callback
+
+# Rate Limiting
+API_RATE_LIMIT_ENABLED=true
+API_RATE_LIMIT_PER_MINUTE=60
+
+# Development/Testing
+ENABLE_SOCIAL_POSTING=true
+ENABLE_ANALYTICS_COLLECTION=true
