--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "google/apiclient": "*",
         "guzzlehttp/guzzle": "^7.9",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
-        "league/oauth2-client": "^2.8",
+        "league/oauth2-client": "*",
         "mongodb/laravel-mongodb": "^5.4",
         "predis/predis": "^3.2",
         "spatie/laravel-activitylog": "^4.10",
