--- a/composer.json
+++ b/composer.json
@@ -10,19 +10,28 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "google/apiclient": "*",
+        "google/apiclient": "^2.18",
         "guzzlehttp/guzzle": "^7.9",
         "inertiajs/inertia-laravel": "^2.0",
+        "intervention/image": "^3.11",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
-        "league/oauth2-client": "*",
+        "league/oauth2-client": "^2.8",
+        "league/oauth2-facebook": "^2.2",
+        "league/oauth2-instagram": "^3.1",
+        "league/oauth2-linkedin": "^5.1",
         "mongodb/laravel-mongodb": "^5.4",
+        "monolog/monolog": "^3.9",
+        "nesbot/carbon": "^3.10",
+        "php-ffmpeg/php-ffmpeg": "^1.3",
         "predis/predis": "^3.2",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-medialibrary": "^11.14",
         "spatie/laravel-permission": "^6.21",
+        "spatie/laravel-responsecache": "^7.7",
+        "spatie/laravel-webhook-client": "^3.4",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
